# EtherCAT.NET

./: .appveyor.yml  .gitmodules  3rd-party-licenses.md  Directory.Build.props  EtherCAT.NET.sln  NuGet.config  README.md  init_solution.ps1  tsconfig.base.json  tsconfig.slaveextension.json
native/: 0001-Tune-SOEM.patch  CMakeLists.txt
native/SOEM_wrapper/: CMakeLists.txt  exports.def  serial.c  serial.h  soem_wrapper.c  soem_wrapper.h
native/SOEM_wrapper/virtDev/: CMakeLists.txt  stub.c  virt_dev.h  virt_dev_linux.c
native/SOEM_wrapper/virtNet/: CMakeLists.txt  stub.c  virt_net.h  virt_net_linux.c
sample/SampleMaster/: Program.cs  SampleMaster.csproj
sample/SampleMaster/Properties/: launchSettings.json
src/EtherCAT.NET/: EcMaster.cs  EcSettings.cs  EcUtilities.cs  EsiUtilities.cs  EtherCAT.NET.csproj
src/EtherCAT.NET/Extensibility/: ExtensibilityHelper.cs  SlaveExtensionLogic.cs  SlaveExtensionSettingsBase.cs  TargetSlaveAttribute.cs
src/EtherCAT.NET/Extension/AnybusXGateway/: AnybusXGatewayExtension.cs  AnybusXGatewaySettings.cs
src/EtherCAT.NET/Extension/DistributedClocks/: DistributedClocksExtension.cs  DistributedClocksOpMode.cs  DistributedClocksParameters.cs  DistributedClocksSettings.cs  DistributedClocksSupporter.cs
src/EtherCAT.NET/Extension/EL3202/: WiringMode.cs  (+2 more)
src/EtherCAT.NET/Infrastructure/: DataDirection.cs  DigitalIn.cs  DigitalOut.cs  EtherCAT.NET.Types.csproj  EtherCATInfo.cs  EthercatDataType.cs  EthercatType.cs  SdoWriteRequest.cs  SlaveExtension.cs  SlaveInfo.cs  SlaveInfoDynamicData.cs  SlavePdo.cs  SlaveVariable.cs  ec_pdo_info_t.cs  ec_slave_info_t.cs  ec_variable_info_t.cs  eoe_param_t.cs
src/EtherCAT.NET/Resources/: ErrorMessage.Designer.cs  ErrorMessage.resx  ExtensionErrorMessage.Designer.cs  ExtensionErrorMessage.resx
src/SOEM.PInvoke/: SOEM.PInvoke.csproj
src/SOEM.PInvoke/PInvoke/: EcBase.cs  EcCoE.cs  EcConfig.cs  EcDc.cs  EcEoE.cs  EcFoE.cs  EcHL.cs  EcMain.cs  EcPrint.cs  EcShared.cs  EcSoE.cs
src/SOEM.PInvoke/Types/: SyncManagerType.cs
tests/EtherCAT.NET.Tests/: EtherCAT.NET.Tests.csproj  PInvokeTests.cs
util/Utilities/: Program.cs  Utilities.csproj  Vendor.cs
web/: OneDas.Extension.Ethercat.Types.d.ts  OneDas.Types.d.ts
(+41 files in other folders)
